[workspace]
members = ["programs/*", "rust-sdk"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = "=0.32.1"
anchor-client = "=0.32.1"
bytemuck = { version = "1.20.0"}
proptest = "1.2.0"