[package]
name = "cp-amm"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cp_amm"

[features]
no-custom-entrypoint = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "no-custom-entrypoint"]
default = ["no-entrypoint"]
local = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true, features = [] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
static_assertions = "1.1.0"
ruint = "1.3.0"
num-traits = "0.2.19"
num_enum = "0.7.0"
num = "0.4.3"
spl-token-metadata-interface = { version = "=0.6.0" }
const-crypto = "0.3.0"
pinocchio = { git = "https://github.com/anza-xyz/pinocchio.git", rev = "17b0e862c01a868ea07ef81a2f8a9b4a504bdfed" }
pinocchio-token = { git = "https://github.com/anza-xyz/pinocchio.git", rev = "17b0e862c01a868ea07ef81a2f8a9b4a504bdfed" }
pinocchio-token-2022 = { git = "https://github.com/anza-xyz/pinocchio.git", rev = "17b0e862c01a868ea07ef81a2f8a9b4a504bdfed" }
protocol-zap = { git = "https://github.com/MeteoraAg/zap-program", rev = "064c58b317b9a85f212c0de72caea286fc72fdb4" }
solana-program = "=2.2.1"

[dev-dependencies]
proptest = { workspace = true}
